--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+  table {
+    background-color: yellow;
+    margin: 20px 0;
+  }
+
+  th, td {
+    padding: 10px 20px;
+    text-align: center;
+  }
+
+  caption {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  th {
+    font-weight: bold;
+  }
